# KickAssGUI

./: AssSequence.regexrx  CMakeLists.txt  README  README.md  VERSION_HISTORY  WhereILeftOff.txt
PSDs/: checkbox.psd  comboBoxDownArrow.psd
Resources/: Info.plist  MacSubmissionCommands.txt
Resources/Images/PSDs/: ArnoldSchwarzeneggerPicture.psd  g3_512.psd
cmake/Modules/: FindArnold.cmake
images/: KickAssGUI.icns  checkbox_orange.png.BAK
src/: CMakeLists.txt  DarkStyle.css  GUI_Images.qrc  KickAssGUI.pro  argumentbuilder.cpp  argumentbuilder.h  asssequencemanager.cpp  asssequencemanager.h  droparea.cpp  droparea.h  gcconstants.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui
src/KickAssGUI.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
src/images/: checkbox_orange.png.sphere
